pool/terrads/host/376231/main.tf
provider "aws" {
    region      =   "ap-south-1"
    profile     =   "default"
}

//Creating variables.
variable vpc_cidr_block {}
variable subnet_cidr_block {}
variable avail_zone {}
variable env_prefix {}
variable my_ip {}


//STEP 1:- Create a VPC
resource "aws_vpc" "myapp-vpc" {
    cidr_block        = var.vpc_cidr_block
    tags              = {
        Name : "${var.env_prefix}-vpc"
    }
}


//STEP 2:- Create a new subnet inside myapp-VPC
resource "aws_subnet" "myapp-subnet-1" {
    vpc_id            =  aws_vpc.myapp-vpc.id
    cidr_block        =  var.subnet_cidr_block
    availability_zone =  var.avail_zone
    tags              =  {
        Name : "${var.env_prefix}-subnet-1"
    }
}


//STEP 3:- Create a new route table inside the myapp-VPC
resource "aws_route_table" "myapp-route-table" {
    vpc_id             =  aws_vpc.myapp-vpc.id
    route {
        cidr_block     =  "0.0.0.0/0"
        gateway_id     =  aws_internet_gateway.myapp-igw.id
    }
    tags               =  {
        Name : "${var.env_prefix}-rtb-1"
    }
}


//STEP 4:- Create a internet gateway for global access.
resource "aws_internet_gateway" "myapp-igw" {
    vpc_id             =  aws_vpc.myapp-vpc.id
     tags              =  {
        Name : "${var.env_prefix}-igw-1"
    }
}


//STEP 5:- Create subnet association to route table.
resource "aws_route_table_association" "a-rtb-subnet" {
  subnet_id      = aws_subnet.myapp-subnet-1.id
  route_table_id = aws_route_table.myapp-route-table.id
}


//STEP 6:- Create a Security group.
resource "aws_security_group" "myapp-sg" {
    name        =   "myapp-sg"
    vpc_id      =    aws_vpc.myapp-vpc.id

    ingress {
        from_port   =   22
        to_port     =   22
        protocol    =   "tcp"
        cidr_blocks  =   [var.my_ip]
    }

    ingress {
        from_port    =   8080
        to_port      =   8080
        protocol     =   "tcp"
        cidr_blocks  =   ["0.0.0.0/0"]
    }

    egress {
        from_port        =   0
        to_port          =   0
        protocol         =   "-1"
        cidr_blocks      =   ["0.0.0.0/0"]
        prefix_list_ids  =   []
    }

    tags = {
        Name: "${var.env_prefix}-sg"
    }
}
